# multi-object-tracking

./: CMakeLists.txt  README.md  main.cpp  test0.avi
